--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@
   transform: translate(-50%, -50%);
 }
 
+a{
+  color: inherit;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
