--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,24 @@ a{
   color: inherit;
 }
 
+.pc{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10%;
+}
+
+.pcText{
+  font-size: 30px;
+  text-align : center;
+  width: 50%;
+}
+
+.pcIcon{
+  font-size: 180px !important;
+  margin-bottom: 30px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
